signin, signout firebase

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -57,6 +57,7 @@
         app:layout_constraintStart_toStartOf="parent" />
 
     <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/register_btn_main"
         android:layout_width="238dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="66dp"
